--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://play-lh.googleusercontent.com/IVQOfJpmZTLs3oO3fhf6KwCtHc_NAZpMnUBVWolmIi8EesWlVC7WnkrYuoVuRKufnR7q=w480-h960-rw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="Dev Craft - Build beautiful websites" />
+    <link rel="manifest" href="./dist/manifest.webmanifest" />
+    <link rel="icon" href="./dist/favicon.ico" />
+    <link rel="apple-touch-icon" href="./dist/apple-touch-icon.png" />
     <title>Uday's Portfolio</title>
   </head>
   <body>
